    Repository-Browse.
  * Drop unnecessary dependency on dh-autoreconf.
  * Drop unnecessary dh arguments: --parallel
  * Secure upstream repo URL
  * Update standards version to 4.6.0, no changes needed.
  * Remove deprecated debian/menu file
  * Harden
  * Modernize and update debian/copyright
  * Add packaging repo on salsa

 -- Barak A. Pearlmutter <bap@debian.org>  Fri, 21 Jan 2022 17:04:58 +0000

usbview (2.0-21-g6fe2f4f-2.1) unstable; urgency=high

  * Non-maintainer upload.
  * Fix authorization for inactive or arbitrary other users (CVE-2022-23220)
  * Pass on the command line parameters to GTK only if not invoked via pkexec

 -- Salvatore Bonaccorso <carnil@debian.org>  Sat, 15 Jan 2022 13:42:37 +0100

usbview (2.0-21-g6fe2f4f-2) unstable; urgency=low

   * Add build dependency on librsvg2-bin since the imagemagick
     maintainers appear to have decided to require that, sadly
     there's been no communication about this transition so hopefully
     that's all that's needed (closes: #897573, #879888).

 -- Mark Brown <broonie@debian.org>  Mon, 04 Jun 2018 10:52:41 +0100

usbview (2.0-21-g6fe2f4f-1) unstable; urgency=low

  * New upstream snapshot (closes: #849000).

 -- Mark Brown <broonie@debian.org>  Sat, 04 Feb 2017 12:24:40 +0100

usbview (2.0-3) unstable; urgency=low

  * Lots of changes, mostly from Barak A. Pearlmutter <barak@cs.nuim.ie>
    with changelog and tweaks from me (closes: #777603).
  * Convert icon to svg format.
  * Make menu entries use su-wrapper.
  * Cleanups to desktop file to bring it up to modern standards,
    including providing keywords.
  * Convert to use dh and use autoreconf.

 -- Mark Brown <broonie@debian.org>  Sat, 25 Apr 2015 12:45:36 +0100

usbview (2.0-2) unstable; urgency=low

  * Policy 3.9.4.
  * Use debhelper 9.
  * Update desktop file (closes: #585110).

 -- Mark Brown <broonie@debian.org>  Fri, 03 May 2013 16:02:07 +0100

usbview (2.0-1) unstable; urgency=low

  * New upstream release (closes: #691232).