@@ -6,5 +6,4 @@
 /autoreconf.before
 /debhelper-build-stamp
 /files
-/icons/
 /usbview/
