@@ -1,9 +1,0 @@
-[Desktop Entry]
-Name=USBView
-Comment=View USB devices attached to system
-Exec=su-to-root -X -c /usr/bin/usbview
-Icon=usbview
-Terminal=false
-Type=Application
-Keywords=USB;devices;connected;removable;
-Categories=GTK;HardwareSettings;Settings;
