@@ -1,4 +1,0 @@
-debian/usbview.desktop /usr/share/applications/
-debian/icons/32x32/usbview.xpm /usr/share/icons/hicolor/32x32/apps/
-debian/icons/64x64/usbview.png /usr/share/icons/hicolor/64x64/apps/
-debian/usbview.svg /usr/share/icons/hicolor/scalable/apps/
