@@ -15,8 +15,11 @@ usbview (2.2-1) UNRELEASED; urgency=medium
   * Harden
   * Modernize and update debian/copyright
   * Add packaging repo on salsa
+  * Upstream has desktop file; remove debian/*.desktop
+  * Upstream has icons (bitmap & svg); remove icons from debian/
+  * Upstream installs man page; no need to do so in debian/
 
- -- Barak A. Pearlmutter <bap@debian.org>  Fri, 21 Jan 2022 17:04:58 +0000
+ -- Barak A. Pearlmutter <bap@debian.org>  Fri, 21 Jan 2022 20:58:00 +0000
 
 usbview (2.0-21-g6fe2f4f-2.1) unstable; urgency=high
 
